# tmp_folder

./: README.md
alg/: CMakeLists.txt  a.out
alg/al_lab1/: desc_asc.py  factorial.py  fibonacci.py  hanoi_tower.py  pow.py
alg/al_lab2/: bubble.py  insertion_simple.py  quick_sort.py  selection_simple.py  sheiker.py  shella.py
alg/al_lab3/: a.out  main.cpp
alg/al_lab4/: main.cpp
db_lab/: db.sqlite3  hello.py
db_lab/views/: accounting.tpl  base.tpl  consumers.tpl  delivered.tpl  index.tpl  non-delivered.tpl  orders.tpl  plan-monthly.tpl  plan-order-monthly.tpl  plan-orders.tpl  plan.tpl  products.tpl
prog_basics/: CMakeLists.txt  lab1.docx  lab10.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx  lab7.docx  lab8.docx  lab9.docx  main.c  ~$lab3.docx  ~$lab4.docx  ~$lab5.docx  ~$lab6.docx  ~$кумент1.docx  Кузщке.pages
prog_basics/basics-of-programming/: lab10.cpp  lab3.cpp  lab4.cpp  lab5  lab5.cpp  lab6.cpp
prog_basics/basics-of-programming/lab1/: a.out  lab1.cpp
prog_basics/basics-of-programming/lab2/: lab2.cpp
prog_basics/basics-of-programming/lab7/: equation.h  lab7-eq.h  lab7.cpp  main
prog_basics/basics-of-programming/lab8/: lab8.cpp
prog_basics/basics-of-programming/lab9/: lab9.cpp
