cmake_minimum_required(VERSION 3.8)
project(kpi_education)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1 basics-of-programming/lab1/lab1.cpp)
add_executable(lab2 basics-of-programming/lab2/lab2.cpp)
add_executable(lab3 basics-of-programming/lab3.cpp)
add_executable(lab4 basics-of-programming/lab4.cpp)
add_executable(lab5 basics-of-programming/lab5.cpp)
add_executable(lab6 basics-of-programming/lab6.cpp)
target_link_libraries(lab6 menu ncurses)
add_executable(lab8 basics-of-programming/lab8/lab8.cpp)
add_executable(lab10 basics-of-programming/lab10.cpp)
target_link_libraries(lab10 SDL2 SDL2_ttf)
